# ML_Superv_Reg_RandomForest

./: .gitignore  2024-07-13  FE-10.ipynb  FILE.INI  README.md  config.INI  db17-22f40-firebase-adminsdk-6ko5w-986a994da9.json  machine_learning.py  mlexe.ipynb  model.pkl  pyproject.toml  submission_2024-07-09T19_33_59.906290.csv
.ipynb_checkpoints/: machine_learning-checkpoint.py  mlexe-checkpoint.ipynb
DB/: realtimeDB.py
utils/: INI_Utility.py
