[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["GuyYar1 <132554415+GuyYar1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
graphviz = "^0.20.3"
configparser = "^7.0.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
